Agora eu melhorei o index incluindo paragrafos

--- a/Projeto Julia/index.html
+++ b/Projeto Julia/index.html
@@ -9,6 +9,12 @@
 
 	<h1>Página Principal</h1>
 
+	<p> Lorem ipsum dolor sit amet. Vel possimus blanditiis qui rerum velit qui eaque consequatur est consequuntur deserunt ut aperiam explicabo qui quam quas et veritatis velit. Eum nisi laudantium ut voluptatem ullam eum consequatur alias sit praesentium totam sit voluptatum inventore.
+
+Qui reprehenderit saepe in sapiente aliquid sit minima enim et consequatur libero eum officiis ipsum sed voluptatibus optio eos galisum obcaecati. Nam aliquam incidunt qui aperiam et sequi odio est dolor officia et tempore delectus qui nisi suscipit ea voluptas aspernatur.
+
+Qui minus repellat ut reiciendis modi aut eaque velit in beatae minima eum minima sint ab facilis voluptatum et consectetur modi. Aut eligendi deleniti est dolorum quasi et minus autem et possimus veniam qui quis animi ea eaque possimus. </p>
+
 	<a href="vendas.html"> Clique aqui e será direcionado a página das vendas </a>
 
 
